header bar construction ongoing

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,10 @@
                         </ul>
                     </div>
                </section>
+
                <section class="navi-bar-wrapper">
-                   <div class="left-navi-dock">
-                       <ul class="left-navi-items">
+                   <div class="navi-bar-dock">
+                       <ul class="navi-bar-items">
                            <li><a>Pet Food Benefits</a></li>
                            <li><a>For Dogs</a></li>
                            <li><a>For Cats</a></li>
