--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                
                <section class="top-bar-wrapper">
                     
-                    <div class="left-block">
+                    <div class="top-content-dock">
                         <div class="logo">
                         </div>
                         <h4>For a healthier, happier pet!</h4>
