--- a/public/index.html
+++ b/public/index.html
@@ -19,15 +19,14 @@
                <section class="top-bar-wrapper">
                     
                     <div class="top-content-dock">
-                        <div class="logo">
-                        </div>
+                        <div class="logo"></div>
                         <h4>For a healthier, happier pet!</h4>
 
                         <div class="account-buttons">
                             <ul>
                                 <li><a class="button">Login</a></li>
                                 <li><a class="button">Signup</a></li>
-                                <li><a class="button">Request a Food Sample</a></li>
+                                <li><a class="button-secondary">Request a <strong>Food Sample</strong></a></li>
                         </div>
                         
                     </div>
@@ -37,11 +36,11 @@
                <section class="navi-bar-wrapper">
                    <div class="navi-bar-dock">
                        <ul class="navi-bar-items">
-                           <li><a>Pet Food Benefits</a></li>
-                           <li><a>For Dogs</a></li>
-                           <li><a>For Cats</a></li>
-                           <li><a>Health & Nutrition</a></li>
-                           <li><a>Stockists</a></li>
+                           <li><a>Pet Food Benefits</a></li><span>|</span>
+                           <li><a>For Dogs</a></li><span>|</span>
+                           <li><a>For Cats</a></li><span>|</span>
+                           <li><a>Health & Nutrition</a></li><span>|</span>
+                           <li><a>Stockists</a></li><span>|</span>
                            <li><a>More...</a></li>
                        </ul>
                     </div>
