--- a/public/index.html
+++ b/public/index.html
@@ -71,13 +71,13 @@
                         <div class="slide second-slide">
                             <div class="img second-img"></div>
                             <h3>What our happy customers say</h3>
-                            <div class="button"></div>
+                            <div class="button"><a><strong>Find out here</strong></a></div>
 						</div>
 						
                         <div class="slide third-slide">
                             <div class="img third-img"></div>
                             <h3>Tips to help your pet stay healthy and happy</h3>
-                            <div class="button"></div>
+                            <div class="button"><a><strong>Health & Nutrition</strong></a></div>
 						</div>
 							
 					</div>
