fixed floated div issues

--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,12 @@
 
                 <div class="subheader-float-divs">
                     <div class="float-div first-div">
+                        <div class="img first-img"></div>
+
+                    </div>
+
+                    <div class="float-div first-div">
+                        <div class="img first-img"></div>
 
                     </div>
 
@@ -94,10 +100,7 @@
                     </div>
 
                     <div class="float-div first-div">
-
-                    </div>
-
-                    <div class="float-div first-div">
+                        <div class="img first-img"></div>
 
                     </div>
 
