--- a/public/index.html
+++ b/public/index.html
@@ -85,22 +85,22 @@
                 </div>
 
                 <div class="subheader-float-divs">
-                    <div class="float-div first-div">
+                    <div class="float-div">
                         <div class="img first-img"></div>
 
                     </div>
 
-                    <div class="float-div first-div">
-                        <div class="img first-img"></div>
+                    <div class="float-div">
+                        <div class="img second-img"></div>
 
                     </div>
 
-                    <div class="float-div first-div">
+                    <div class="float-div">
 
                     </div>
 
-                    <div class="float-div first-div">
-                        <div class="img first-img"></div>
+                    <div class="float-div">
+                        <div class="img third-img"></div>
 
                     </div>
 
