--- a/public/index.html
+++ b/public/index.html
@@ -85,25 +85,39 @@
                 </div>
 
                 <div class="subheader-float-divs">
-                    <div class="float-div">
-                        <div class="img first-img"></div>
+                    
+                    <a href="#!">
+                        <div class="float-div">
+                            <div class="img" style="background-image: url('/images/float1.jpg');"></div>
+                            <div class="a-tag">
+                                <div class="float-div-text">For your <strong>dog</strong></div>
+                            </div>
+                            <i class="material-icons">pets</i>
+                        </div>
+                    </a>
+                    
 
+                    <div class="float-div">
+                        <div class="img" style="background-image: url('/images/float2.jpg');"></div>
+                        <div class="a-tag">
+                            <div class="float-div-text">For your <strong>cat</strong></div>
+                        </div>
+                        <i class="material-icons">pets</i>
                     </div>
 
                     <div class="float-div">
-                        <div class="img second-img"></div>
-
+                        <p class="float-header-text">When you love your pets, you want to make sure you give them everything they need to live a healthy and happy life.</p>
+                        <p class="float-body-text">At Healthy Pet Foods you will find premium natural pet foods and treats for your dog or cat. All our pet foods and treats are made with the highest quality animal and fish proteins, whole grains, farm fresh eggs, berries, fruits and vegetables. We have grain free dog food options as well as dog foods made with non-allergenic whole grains. All our cat food is grain free. </p>
+                        <p class="float-body-text">Our pet foods don’t include corn, wheat, soy, glutens or other common grains or fillers that can cause allergies in many cats and dogs. This means your pets get a complete, nutritious, satisfying meal every time. Because each meal is high in energy, you may find you need to feed your pet less, which makes it cost-effective for you too.</p>
                     </div>
 
                     <div class="float-div">
-
+                        <div class="img" style="background-image: url('/images/float3.jpg');"></div>
+                        <div class="a-tag">
+                            <div class="float-div-text">Find a <strong>stockist</strong></div>
+                        </div>
+                        <i class="material-icons">store</i>
                     </div>
-
-                    <div class="float-div">
-                        <div class="img third-img"></div>
-
-                    </div>
-
 
                 </div>
 
