--- a/public/index.html
+++ b/public/index.html
@@ -130,21 +130,25 @@
                         <div class="product-div">
                              <div class="img" style="background-image: url('/images/product1.jpg');"></div>
                              <div class="product-info">
-                                 <a>GO! FIT + FREE Grain Free Chicken, Turkey + Duck CF</a><p class="volume">1.81kg</p>
+                                 <a>GO! FIT + FREE Grain Free Chicken, Turkey + Duck CF <p class="volume">1.81kg</p></a>
+                                 <span class="sale-price">From NZ $44.00 inc.</span>
+                                 <div class="button">View Sizes</div>
                              </div>
                         </div>
 
                         <div class="product-div">
                             <div class="img" style="background-image: url('/images/product2.jpg');"></div>
                             <div class="product-info">
-                                <a>NUTRIPE Classic Salmon & Green Lamb Tripe Formula Cat Food</a><p class="volume">24 x 185g</p>
+                                <a>NUTRIPE Classic Salmon & Green Lamb Tripe Formula Cat Food <p class="volume">24 x 185g</p></a>
+                                <span class="sale-price">NZ $81.60 inc.</span>
                             </div>
                         </div>
 
                         <div class="product-div">
                             <div class="img" style="background-image: url('/images/product3.png');"></div>
                             <div class="product-info">
-                                <a>SPIKE™ Grain Free Venison Jerky for Dogs</a><p class="volume"></p>
+                                <a>SPIKE™ Grain Free Venison Jerky for Dogs <p class="volume"></p></a>
+                                <span class="sale-price">NZ $17.95 inc.</span>
                             </div>
                         </div>
 
